grid alignment fix

--- a/src/sass/components/_grid.scss
+++ b/src/sass/components/_grid.scss
@@ -19,10 +19,21 @@
     }
   }
 
+  picture {
+    display: block;
+    height: 100%;
+    overflow: hidden;
+  }
+
   img {
     width: 100%;
     height: auto;
     display: block;
+
+    @supports(object-fit: cover) {
+      height: 100%;
+      object-fit: cover;
+    }
   }
 
   @media #{$mediaPhone} {
